--- a/knip.jsonc
+++ b/knip.jsonc
@@ -13,20 +13,28 @@
 		"server/middleware/**/*.ts",
 		"server/plugins/**/*.ts",
 		"tsconfig.json",
+		"eslint.config.mjs",
 	],
-	"ignore": ["eslint.config.mjs", "vitest.config.mjs"],
+	"ignore": ["vitest.config.mjs"],
 	"ignoreDependencies": [
 		"h3",
 		"vue-tsc",
 		"tailwindcss",
-		"@supabase/supabase-js",
-		"vite",
+		"vue-eslint-parser",
+		"@pinia/nuxt",
 		"@nuxt/devtools",
 		"@nuxt/eslint",
+		"@nuxt/icon",
 		"@nuxtjs/google-fonts",
+		"@nuxtjs/supabase",
 		"@nuxtjs/tailwindcss",
+		"@supabase/supabase-js",
+		"@typescript-eslint/parser",
 		"@vueuse/nuxt",
 	],
+	"paths": {
+		"#supabase/server": ["node_modules/@nuxtjs/supabase/dist/runtime/server/services/index.js"],
+	},
 	"lefthook": {
 		"config": [],
 	},
