--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
 	// https://nuxt.com/docs/guide/concepts/typescript
 	"extends": "./.nuxt/tsconfig.json",
 	"compilerOptions": {
-		"types": ["@types/node", "vitest/globals"]
+		"types": ["vitest/globals"]
 	}
 }
