--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
-    "postgres": "^3.4.5"
+    "postgres": "^3.4.5",
+    "valibot": "^1.0.0-beta.12"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.0.0-beta.2",
