--- a/knip.jsonc
+++ b/knip.jsonc
@@ -13,7 +13,7 @@
 		"server/middleware/**/*.ts",
 		"server/plugins/**/*.ts",
 		"tsconfig.json",
-		"eslint.config.mjs",
+		"eslint.config.mjs"
 	],
 	"ignore": ["vitest.config.mjs"],
 	"ignoreDependencies": [
@@ -31,12 +31,12 @@
 		"@supabase/supabase-js",
 		"@typescript-eslint/parser",
 		"@vueuse/nuxt",
-		"@vueuse/core",
+		"@vueuse/core"
 	],
 	"paths": {
-		"#supabase/server": ["node_modules/@nuxtjs/supabase/dist/runtime/server/services/index.js"],
+		"#supabase/server": ["node_modules/@nuxtjs/supabase/dist/runtime/server/services/index.js"]
 	},
 	"lefthook": {
-		"config": [],
-	},
+		"config": []
+	}
 }
