--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "valibot": "^1.0.0-beta.14"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@nuxt/devtools": "^2.0.0-beta.3",
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/icon": "^1.10.3",
@@ -37,11 +38,13 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "format": "prettier --write \"**/*.{js,ts,vue,css,json}\"",
-    "format:check": "prettier --check \"**/*.{js,ts,vue,css,json}\"",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
     "generate": "nuxt generate",
     "lint": "eslint . && oxlint",
     "lint:fix": "eslint . --fix",
+    "lint:biome": "biome check .",
+    "lint:biome:fix": "biome check --write .",
     "lint:inspect": "eslint --inspect-config",
     "postinstall": "nuxt prepare",
     "preview": "nuxt preview",
