chore: Update workflow

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Update dependencies
         run: |
-          bun update --latest
+          bun update
           
       - name: Check for changes
         id: git-check
