--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-jsdoc": "^50.6.6",
     "happy-dom": "^17.4.4",
     "knip": "^5.46.0",
+    "lefthook": "^1.6.7",
     "nuxt": "^3.16.0",
     "oxlint": "^0.15.15",
     "typescript": "5.8.2",
@@ -43,7 +44,7 @@
     "lint:biome": "biome check .",
     "lint:biome:fix": "biome check --write .",
     "lint:inspect": "eslint --inspect-config",
-    "postinstall": "nuxt prepare",
+    "postinstall": "nuxt prepare && lefthook install",
     "preview": "nuxt preview",
     "test": "vitest",
     "typecheck": "nuxi typecheck",
