chore: Add Lefthook (#307)
Co-authored-by: Tsuyoshi84 <11254699+Tsuyoshi84@users.noreply.github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
 	"recommendations": [
 		"antfu.iconify",
+		"biomejs.biome",
 		"bradlc.vscode-tailwindcss",
 		"christian-kohler.path-intellisense",
 		"dbaeumer.vscode-eslint",
