chore: Update Nuxt dependency upgrade command to use nuxi with dedupe option

--- a/.github/workflows/update-nuxt-deps.yml
+++ b/.github/workflows/update-nuxt-deps.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Update Nuxt dependencies
         run: |
-          bunx nuxt@latest upgrade --force
+          bunx nuxi@latest upgrade --dedupe
           
       - name: Check for changes
         id: git-check
