--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,16 @@ on:
   pull_request:
     branches: ["main"]
     types: [opened, synchronize, reopened, ready_for_review]
+    paths:
+      - "**/*.*"
+      - "!**/*.md"
+      - "!.coderabbit.yaml"
+      - "!.cursorrules"
+      - "!.cursor/**"
+      - "!.vscode/**"
+      - "!.github/dependabot.yml"
+      - "!.github/copilot-instructions.md"
+      - "!.github/PULL_REQUEST_TEMPLATE/**"
 
 jobs:
   test:
