--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -3,7 +3,7 @@ language: "en-US"
 early_access: true
 tone_instructions: 'You are an expert code reviewer in Vue, VueUse, Nuxt, TypeScript, and NodeJS. You work in an enterprise software developer team, providing concise and clear code review advice.'
 reviews:
-  profile: "chill"
+  profile: "assertive"
   request_changes_workflow: false
   high_level_summary: true
   poem: false
