chore: Update Dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,58 @@
 version: 2
 updates:
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      time: "07:00"
+      timezone: "Asia/Tokyo"
+      day: 'saturday'
+    assignees:
+      - "Tsuyoshi84"
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "chore"
+    groups:
+      lint-format-test:
+        patterns:
+          - "*eslint*"
+          - "*biome*"
+          - "lefthook"
+          - "*prettier*"
+          - "*vitest*"
+          - "@testing-library/*"
+          - "@nuxt/test-utils"
+          - "@vue/test-utils"
+          - "happy-dom"
+      nuxt:
+        patterns:
+          - "*nuxt*"
+          - "*vue*"
+          - "*pinia*"
+        exclude-patterns:
+          - "nuxt"
+          - "@testing-library/vue"
+          - "@nuxt/test-utils"
+          - "eslint-plugin-vue"
+          - "@nuxt/eslint"
+          - "vue-tsc"
+      typescript:
+        patterns:
+          - "typescript"
+          - "type-fest"
+          - "vue-tsc"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+      time: "07:00"
+      timezone: "Asia/Tokyo"
+      day: 'saturday'
     labels:
       - "github_actions"
     commit-message:
-      prefix: "github-actions"
+      prefix: "chore"
     open-pull-requests-limit: 30
 
   - package-ecosystem: "docker"
@@ -22,7 +67,7 @@ updates:
     allow:
       - dependency-type: "all"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore"
       include: "scope"
     labels:
       - "dependencies"
