chore: Add TypeScript import extension rules to biome.json

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,17 @@
 				"useFlatMap": "error"
 			},
 			"correctness": {
+				"useImportExtensions": {
+					"level": "error",
+					"options": {
+						"suggestedExtensions": {
+							"ts": {
+								"module": "ts",
+								"component": "vue"
+							}
+						}
+					}
+				},
 				"noUnusedImports": "warn",
 				"noUnusedVariables": "warn"
 			},
