feat: Update match-words page layout (#338)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,9 @@
 	"extends": "./.nuxt/tsconfig.json",
 	"compilerOptions": {
 		"types": ["vitest/globals"]
+	},
+	"vueCompilerOptions": {
+		// "strictTemplates": true,
+		"dataAttributes": ["data-*"]
 	}
 }
