--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "valibot": "^1.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "^2.0.5",
     "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/icon": "^1.12.0",
@@ -43,10 +43,9 @@
     "format:check": "biome format .",
     "format:prettier": "prettier --write \"app/**/*.vue\"",
     "generate": "nuxt generate",
+    "check": "biome check --write",
     "lint": "eslint . && oxlint",
     "lint:fix": "eslint . --fix",
-    "lint:biome": "biome check .",
-    "lint:biome:fix": "biome check --write .",
     "lint:inspect": "eslint --inspect-config",
     "postinstall": "nuxt prepare && lefthook install",
     "preview": "nuxt preview",
