Fix Biome errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,7 @@ jobs:
         run: bun lint:fix
 
       - name: Lint Biome
-        run: bun lint:biome:fix
-
-      - name: Format Check
-        run: bun format
+        run: bun check 
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v6
