Rename to Biome Check
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
         run: bun lint:fix
 
       - name: Lint Biome
-        run: bun check 
-
+      - name: Biome Check
+        run: bun check
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v6
 
