--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,8 @@ jobs:
         run: bun lint:fix
 
       - name: Lint Biome
-        run: bun lint:biome:fix
-
-      - name: Format Check
-        run: bun format
-
+      - name: Biome Check
+        run: bun check
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v6
 
