--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -32,7 +32,7 @@ reviews:
         - Favor named exports for functions to maintain consistency and readability.
         - Prefer function declarations over function expressions. However, when passing a function to a parameter, prefer using a function expression.
         - Define function return types for better readability and type safety.
-        - Use type over interface when possible.
+        - Use `interface` over `type` when defining an object type.
         - Use literal union types over enums.
         - Use `unknown` over `any`.
         - Use `undefined` over `null` when possible.
