--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "vitest": "^3.1.2",
     "vue-tsc": "^3.0.0"
   },
+  "overrides": {
+    "estree-walker": "2.0.2"
+  },
   "name": "learn_tagalog",
   "packageManager": "bun@1.0.35",
   "private": true,
