Update Coderabbit rules

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -65,6 +65,9 @@ reviews:
         - Prefer `v-show` over `v-if` for conditional visibility.
         - Specify `type` attribute for `<button>` elements.
         - Pass an object to `<NuxtLink :to>` for better type safety. For example, `<NuxtLink :to="{ name: 'about' }">`.
-        - Use TailwindCSS for styling.
+        - Use modern CSS features as much as possible.
+        - Use logical properties. For example, Use `inline-size` over `width`.
+        - Use `translate`, `rotate`, `scale` ((Individual transform properties)) individually over `transform`.
+        - Use `oklch` for colors.
 chat:
   auto_reply: true
