--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -66,8 +66,8 @@ reviews:
         - Specify `type` attribute for `<button>` elements.
         - Pass an object to `<NuxtLink :to>` for better type safety. For example, `<NuxtLink :to="{ name: 'about' }">`.
         - Use modern CSS features as much as possible, assuming users always use the latest browser versions.
-        - Use logical properties. For example, Use `inline-size` over `width`.
-        - Use OKLCH for colors.
-        - Use `translate`, `rotate`, `scale` ((Individual transform properties)) individually over `transform` shorthand.
+        - Use logical properties—for example, `inline-size` instead of `width`.
+        - Use OKLCH for colors—no need for RGB / HSL fallback.
+        - Prefer individual transform properties (`translate`, `rotate`, `scale`) over the `transform` shorthand.
 chat:
   auto_reply: true
