--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -6,6 +6,6 @@ pre-commit:
   parallel: true
   commands:
     biome-check:
-      glob: "*.{js,ts,jsx,tsx,vue,json}"
+      glob: "*.{js,ts,jsx,tsx,vue,json,css}"
       run: bun check --staged --no-errors-on-unmatched
       stage_fixed: true
