--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Install dependencies
         run: bun install --no-save
 
-      - name: Knip
-        run: bun run knip
+      # - name: Knip
+      #   run: bun run knip
 
       - name: Type Check
         run: bun typecheck
