--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "nuxt": "^4.0.0",
     "oxlint": "^1.1.0",
     "prettier": "^3.5.3",
+    "stylelint": "^16.22.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-pretty-order": "^0.7.0",
+    "stylelint-use-logical-spec": "^5.0.1",
     "typescript": "5.8.3",
     "vitest": "^3.1.2",
     "vue-tsc": "^3.0.0"
@@ -43,6 +47,8 @@
     "lint": "eslint . && oxlint",
     "lint:fix": "eslint . --fix",
     "lint:inspect": "eslint --inspect-config",
+    "lint-css": "stylelint \"**/*.{css,vue}\" --ignore-path .gitignore",
+		"lint-css:fix": "stylelint \"**/*.{css,vue}\" --fix --ignore-path .gitignore",
     "postinstall": "nuxt prepare && lefthook install",
     "preview": "nuxt preview",
     "test": "vitest",
