--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: bun lint:fix
 
       - name: Lint CSS
-        run: bun lint-css:fix
+        run: bun lint:css:fix
 
       - name: Biome Check
         run: bun check
