--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "lint": "eslint . && oxlint",
     "lint:fix": "eslint . --fix",
     "lint:inspect": "eslint --inspect-config",
-    "lint-css": "stylelint \"**/*.{css,vue}\" --ignore-path .gitignore",
-		"lint-css:fix": "stylelint \"**/*.{css,vue}\" --fix --ignore-path .gitignore",
+    "lint:css": "stylelint \"**/*.{css,vue}\" --ignore-path .gitignore",
+		"lint:css:fix": "stylelint \"**/*.{css,vue}\" --fix --ignore-path .gitignore",
     "postinstall": "nuxt prepare && lefthook install",
     "preview": "nuxt preview",
     "test": "vitest",
