chore: Add StyleLint (#360)
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Lint
         run: bun lint:fix
 
+      - name: Lint CSS
+        run: bun lint:css:fix
+
       - name: Biome Check
         run: bun check
 
