--- a/biome.json
+++ b/biome.json
@@ -21,19 +21,18 @@
 		"rules": {
 			"recommended": true,
 			"complexity": {
-				"noForEach": "error"
+				"noForEach": "error",
+				"useIndexOf": "on"
 			},
 			"correctness": {
 				"noUnusedImports": "warn",
 				"noUnusedVariables": "warn"
 			},
-			"nursery": {
-				"useConsistentObjectDefinition": "on",
-				"useIndexOf": "on"
-			},
+			"nursery": {},
 			"style": {
 				"noNestedTernary": "on",
 				"noParameterAssign": "error",
+				"useConsistentObjectDefinitions": "on",
 				"useExplicitLengthCheck": "error",
 				"useImportType": "warn",
 				"useNumberNamespace": "error",
