--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@js-temporal/polyfill": "^0.5.1",
+    "@sentry/nuxt": "^10",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "postgres": "^3.4.7",
@@ -56,5 +57,8 @@
     "schema": "bunx drizzle-kit pull",
     "knip": "knip"
   },
-  "type": "module"
+  "type": "module",
+  "overrides": {
+    "@vercel/nft": "^0.27.4"
+  }
 }
